# iqrf-daemon

./: .gitignore  .travis.yml  BUILD.md  DOCKER.md  Dockerfile  INSTALL.md  NEWS.md  README.md  REPOSITORY.md
applications/iqrf_ide_dummy/: CMakeLists.txt  build32.bat  build64.bat  buildMake.sh  main.cpp
applications/iqrf_startup_pm/: CMakeLists.txt  build64.bat  buildMake.sh
applications/iqrf_startup_pm/ClientServicePm/: CMakeLists.txt  ClientServicePm.cpp  ClientServicePm.h  PrfPulseMeter.cpp  PrfPulseMeter.h
applications/iqrf_startup_pm/configuration/: config.json
applications/iqrf_startup_pm/iqrf_startup_pm/: CMakeLists.txt  initModules.h  main.cpp
applications/iqrf_startup_pm/iqrf_startup_pm/configuration/: ClientServicePm.json  IqrfInterface.json  JsonSerializer.json
applications/iqrfapp/: CMakeLists.txt  VersionInfo.h.in  build.py  build32.bat  build64.bat  buildEclipse.sh  buildMake.sh  iqrfapp.json  main.cpp
applications/protocol_bridge/: CMakeLists.txt  build32.bat  build64.bat  buildMake.sh
applications/protocol_bridge/ProtocolBridgeClientService/: CMakeLists.txt  ProtocolBridge.cpp  ProtocolBridge.h  ProtocolBridgeClientService.cpp  ProtocolBridgeClientService.h
applications/protocol_bridge/startup/: CMakeLists.txt  initModules.h
applications/protocol_bridge/startup/configuration/: IqrfInterface.json  MqttMessaging.json  ProtocolBridgeClientService.json  Scheduler.json  TracerFile.json  UdpMessaging.json  config.json  iqrfapp.json
daemon/: .gitignore  CMakeLists.txt  Doxyfile  README.md  VersionInfo.h.in  build.py  build32.bat  build64.bat  buildEclipse.sh  buildMake.sh  iqrfdConfig.cmake.in
daemon/BaseService/: BaseService.cpp  BaseService.h  CMakeLists.txt
daemon/ClientService/: CMakeLists.txt  ClientService.cpp  ClientService.h
daemon/ClientServicePlain/: CMakeLists.txt  ClientServicePlain.cpp  ClientServicePlain.h
daemon/ClientServicePm/: CMakeLists.txt  ClientService.h  ClientServicePm.cpp  ClientServicePm.h  PrfPulseMeter.cpp  PrfPulseMeter.h
daemon/DaemonController/: CMakeLists.txt  DaemonController.cpp  DaemonController.h  doxygen.d.bkp
daemon/JsonCoding/: CMakeLists.txt  JsonCoding.cpp  JsonCoding.h  SimpleSerializer.cpp  SimpleSerializer.h  test.json
daemon/JsonSerializer/: CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.h  PrfStdSen.cpp  PrfStdSen.h  test.json
daemon/MessagingController/: CMakeLists.txt  MessagingController.cpp  MessagingController.h
daemon/MqMessaging/: CMakeLists.txt  IqrfappMqMessaging.cpp  IqrfappMqMessaging.h  MqMessaging.cpp  MqMessaging.h
daemon/MqttMessaging/: CMakeLists.txt  MqttMessaging.cpp  MqttMessaging.h
daemon/Scheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h
daemon/SchedulerMessaging/: CMakeLists.txt  SchedulerMessaging.cpp  SchedulerMessaging.h
daemon/SimpleSerializer/: CMakeLists.txt  SimpleSerializer.cpp  SimpleSerializer.h
daemon/Startup/: CMakeLists.txt  Startup.cpp
daemon/TestClient/: CMakeLists.txt  TestClient.cpp  TestClient.h
daemon/UdpMessaging/: CMakeLists.txt  UdpMessage.h  UdpMessaging.cpp  UdpMessaging.h  UdpMessagingTransaction.cpp  UdpMessagingTransaction.h  crc.h  helpers.c  helpers.h
daemon/cmake/modules/: 0001-Fixed-build-and-installation-for-Win-and-SSL.patch  0001-Fixed-build-and-installation-for-Win.patch  0002-Fixed-build-with-SSL.patch  Findpaho.cmake  readme.txt
daemon/daemon/: CMakeLists.txt  MessagingController.cpp  MessagingController.h  main.cpp
daemon/include/: CMakeLists.txt  IClient.h  IDaemon.h  IDpaExclusiveAccess.h  IDpaMessageForwarding.h  IMessaging.h  IScheduler.h  ISerializer.h  IService.h  JsonUtils.h  LaunchUtils.h  ObjectFactory.h  Startup.h  TaskQueue.h  UdpMessage.h  WatchDog.h  crc.h
daemon/iqrf_ide_dummy/: CMakeLists.txt  main.cpp
daemon/iqrf_startup/: CMakeLists.txt  config.json  initModules.h  main.cpp
daemon/iqrf_startup/configuration/: BaseService.json  ClientServicePlain.json  ClientServicePm.json  IqrfInterface.json  JsonSerializer.json  MqMessaging.json  MqttMessaging.json  MqttMessaging_local.json  Scheduler.json  SimpleSerializer.json  UdpMessaging.json  config.json
daemon/iqrf_startup/configurationExamples/: IqrfInterface.json  IqrfInterfaceLinCDC.json  IqrfInterfaceLinSPI.json  IqrfInterfaceWinCDC.json  MqttMessaging_Azure.json  MqttMessaging_Localaddr.json  Scheduler_1.json  Scheduler_2.json  Scheduler_3.json  Scheduler_4.json  Scheduler_5.json  Scheduler_6.json  Scheduler_Frc.json  Scheduler_OsRead.json  Scheduler_broadcast.json  Scheduler_test.json
daemon/iqrf_startup/service/: iqrf-daemon.service  tracefile_add_timestamp.sh
daemon/iqrf_startup_bg/: CMakeLists.txt  init.d  main.cpp
daemon/iqrfapp/: CMakeLists.txt  main.cpp
daemon/udp/: CMakeLists.txt  IQRF_UDP.c  IQRF_UDP.h
doc/: iqrf-gateways.xmind
docker/: Dockerfile.amd64  Dockerfile.rpi  Dockerfile1C.amd64  Dockerfile1C.rpi  Dockerfile2C.amd64  Dockerfile2C.rpi  INSTALL.md  README.md
examples/: README.md
include/: IqrfLogging.h  PlatformDep.h
scripts/: build-centos.sh  build-debian.sh  build-raspbian.sh  build-rpi.sh  build-travis.sh  build-ubuntu.sh  build-up.sh  buildAllRpi.sh  download-dependencies.sh  download.py  (+15 more)
udp-daemon/MessageQueue/: CMakeLists.txt  MessageQueue.cpp  MessageQueue.h
udp-daemon/MqMessaging/: CMakeLists.txt  MqMessaging.cpp  MqMessaging.h
udp-daemon/PipeMessaging/: CMakeLists.txt  PipeMessaging.cpp  PipeMessaging.h
udp-daemon/UdpChannel/: CMakeLists.txt  UdpChannel.cpp  UdpChannel.h
udp-daemon/UdpMessaging/: CMakeLists.txt  MessageHandler.cpp  MessageHandler.h  UdpMessaging.cpp  UdpMessaging.h
udp-daemon/daemon/: CMakeLists.txt  MessagingController.cpp  MessagingController.h  main.cpp
udp-daemon/iqrf_ide_dummy/: CMakeLists.txt  main.cpp
udp-daemon/iqrfapp/: CMakeLists.txt  main.cpp
udp-daemon/udp/: CMakeLists.txt  IQRF_UDP.c  helpers.h
udp-daemon/udp-daemon/: CMakeLists.txt  Channel.h  IqrfCdcChannel.cpp  IqrfCdcChannel.h  IqrfSpiChannel.cpp  IqrfSpiChannel.h  MessageHandler.cpp  MessageHandler.h  MessageQueue.cpp  MessageQueue.h  UdpChannel.cpp  UdpChannel.h  UdpMessage.h  main.cpp
(+93 files in other folders)
